--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ img {
 /* Заголовок */
 .header {
   border-bottom: solid #ececec;
+  position: relative;
 }
 
 /*  Логотип компании */
@@ -112,6 +113,24 @@ img {
 
   color: var(--secondary-text-color);
 }
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  display: block;
+  content: '';
+  background-color: var(--accent-color);
+  border-radius: 2px;
+
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  z-index: 2;
+}
+
 .accent {
   color: var(--accent-color);
 }
