--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,8 @@ img {
   align-items: center;
 
   color: var(--primary-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts-svg {
@@ -183,7 +185,6 @@ img {
 .header-contacts:focus,
 .header-contacts-list:hover,
 .header-contacts-list:focus,
-.order-button:focus,
 .footer-logo:hover,
 .footer-logo:focus,
 .footer-address-item:hover,
@@ -191,6 +192,23 @@ img {
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--accent-color);
+}
+/* Анимация */
+.company-logo,
+.company-logo,
+.nav-header-list,
+.nav-header-list,
+.header-contacts,
+.header-contacts,
+.header-contacts-list,
+.header-contacts-list,
+.footer-logo,
+.footer-logo,
+.footer-address-item,
+.footer-address-item,
+.footer-contacts,
+.footer-contacts {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Секция Герой */
@@ -249,6 +267,10 @@ img {
   background-color: var(--button-primary-color);
   color: var(--secondary-text-color);
   border-radius: 4px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button.primary:focus,
@@ -351,6 +373,7 @@ img {
 
 .work-item {
   position: relative;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-item-hover {
@@ -362,6 +385,7 @@ img {
 
   width: 100%;
   height: 70px;
+  bottom: 0;
   opacity: 0;
 
   font-weight: 700;
@@ -444,12 +468,16 @@ img {
   border-radius: 50%;
   background-color: var(--primary-bg-color);
   fill: var(--primary-icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-icon {
   margin-top: 11px;
   width: 20px;
   height: 20px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-link:hover,
@@ -497,12 +525,17 @@ img {
   height: 92px;
   border: 1px solid var(--primary-icon-color);
   border-radius: 4px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon {
   width: 106px;
   height: 60px;
   margin: 16px 32px;
   fill: var(--primary-icon-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:focus .clients-icon,
@@ -517,7 +550,7 @@ img {
   fill: var(--accent-color);
 }
 
-.clients-linl:focus,
+.clients-link:focus,
 .clients-link:hover {
   border: 1px solid var(--accent-color);
 }
@@ -630,6 +663,39 @@ img {
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 } */
+
+/* Модальное окно */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  width: 1600px;
+  height: 1024px;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--primary-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
 
 /* Подвал */
 .footer {
