--- a/css/style.css
+++ b/css/style.css
@@ -687,14 +687,19 @@ img {
   height: 1024px;
 
   background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms var(--timing-function),
+    transform 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .modal {
+  display: block;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -707,6 +712,26 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.button-modal {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+  background-color: var(--primary-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: 8px;
+  padding: 0;
+}
+
+.modal-icon {
+  width: 11px;
+  height: 11px;
 }
 
 /* Подвал */
