Исправляет ошибки анимации модалки

--- a/css/style.css
+++ b/css/style.css
@@ -680,16 +680,23 @@ img {
 .backdrop {
   position: fixed;
   top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
 
   width: 1600px;
   height: 1024px;
 
   background-color: rgba(0, 0, 0, 0.2);
 
+  transform: scale(1);
+  opacity: 1;
   transition: opacity 250ms var(--timing-function),
     transform 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.9);
+  transition: transform 250ms var(--timing-function),
+    opacity 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
@@ -703,7 +710,6 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
 
   width: 528px;
   height: 581px;
@@ -712,6 +718,9 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--timing-function);
 }
 
 .button-modal {
