--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,7 @@ img {
 
 .work-examples {
   margin-top: 0;
+  margin-bottom: 50px;
 
   font-weight: 700;
   font-size: 36px;
@@ -388,7 +389,7 @@ img {
   width: 100%;
   height: 70px;
   bottom: 0;
-  opacity: 0;
+  opacity: 1;
 
   font-weight: 700;
   font-size: 14px;
@@ -403,8 +404,8 @@ img {
   transition: opacity 250ms var(--timing-function);
 }
 
-.work-item:hover .work-item-hover {
-  opacity: 1;
+/* .work-item:hover .work-item-hover {
+  opacity: 1; */
 }
 
 /* Наша команда */
